syntax = "proto3";

package users_pb;
option go_package = "internal/grpc/pb/users_pb";

import "users_pb/user.proto";
import "users_pb/create_user.proto";
import "users_pb/get_user.proto";
import "common.proto";

service UserService {
  // get list users with filter and pagination
  rpc getList(users_pb.UserListParams) returns (users_pb.ArrayUser) {};
  // get user by id
  rpc getByID(common.ID) returns (users_pb.User) {};

  // create user
  rpc create(users_pb.CreateUserRequest) returns (users_pb.User) {};
  //update user
  rpc update(users_pb.UpdateUserRequest) returns (users_pb.User) {};
  // delete user by id
  rpc deleteByID(common.ID) returns (users_pb.User) {};

  // self profile
  rpc me(common.Empty) returns (users_pb.User) {}
}
